--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "KelnikStudio",
   "version": "1.0.1",
   "private": true,
-  "description": "Landing Office",
+  "description": "KelnikStudio",
   "devDependencies": {
     "autoprefixer": "8.3.x",
     "browser-sync": "^2.24.4",
