--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sass": "4.0.x",
     "gulp-svgstore": "^6.1.1",
     "gulp-webp": "^3.0.0",
+    "har-validator": "^5.1.3",
     "list.js": "^1.5.0",
     "postcss-html": "^0.23.7",
     "postcss-markdown": "^0.23.7",
